# c4-model-arquitetura-multiplataforma

./: .gitignore  README.md  componente-level-3.plantuml  conteiner-level-2.plantuml  contexto-level-1.plantuml  deploy-level-4.plantuml
Collection/: locacao-FINAL.postman_collection.json
diagramas/: C4 Model - C1.drawio  conteiner-level-2.plantuml
fontes/: CONTRATOS.md  CONTRATOS_revisados.md  docker-compose.yaml  setup-kong.sh
fontes/.docker/: entrypoint-localstack.sh
fontes/Locacao.UserServiceApp/: Dockerfile  Locacao.UserServiceApp.csproj  Locacao.UserServiceApp.http  Locacao.UserServiceApp.sln  Program.cs  WeatherForecast.cs
fontes/Locacao.UserServiceApp/Controllers/: WeatherForecastController.cs
fontes/Locacao.UserServiceApp/Properties/: launchSettings.json
fontes/Locacao.VehicleServiceApp/: Dockerfile  Locacao.VehicleServiceApp.csproj  Locacao.VehicleServiceApp.http  Locacao.VehicleServiceApp.sln  Program.cs  VehicleProgram.cs  WeatherForecast.cs
fontes/Locacao.VehicleServiceApp/Controllers/: VehicleController.cs  WeatherForecastController.cs
fontes/Locacao.VehicleServiceApp/Models/: Vehicle.cs
fontes/Locacao.VehicleServiceApp/Properties/: launchSettings.json
fontes/bootstrap/: init.sh  restart.sh
fontes/keycloak/: DockerFile  ExportarRealm.txt  realm-export.json
fontes/kong/: kong.yaml
fontes/notification-service/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init-sqs.sh  migrate.sh  reset_notification_db.sh  rustfmt.toml
fontes/notification-service/.sqlx/: query-0322ea2a790fd8f54b96969d424d061ef715d6769d61ae694a3b40d43964e974.json  query-051c5498ad948b5656e690f5f8d459feae259519122b8c27a1dc9288a73a9781.json  query-3fc2c682e736b6c0d537cc89003927534de9f688a0e34fc8e3cb906b2bbfc53c.json  query-b1590a76995cdf50188342ed4d9b9f01251a2346432ec064b2e4a090cd6a7111.json  query-e084f17c83dcc3a54d591628f38da7bf047b701ea60bc5841202f7a89c0e3ddb.json  query-ea1a51a66eae4e40e00819b2fdb3c1e99cc6cca4a3e628f80f187c813c17128e.json
fontes/notification-service/config/: default.toml  dev.toml  prod.toml
fontes/notification-service/localstack/cache/: machine.json
fontes/notification-service/migrations/: 000_init.sql
fontes/notification-service/scripts/: entrypoint.sh
fontes/notification-service/src/: domain.rs  infrastructure.rs  lib.rs  main.rs
fontes/notification-service/src/application/: state.rs
fontes/notification-service/src/application/service/: email_error_service.rs  email_service.rs  mod.rs
fontes/notification-service/src/domain/: email.rs  email_error.rs  sqs_email.rs
fontes/notification-service/src/domain/value_objects/: email_field.rs  mod.rs  name_field.rs
fontes/notification-service/src/infrastructure/: db.rs  sqs_client.rs  worker.rs
fontes/notification-service/src/infrastructure/http/: error.rs  routes.rs
fontes/notification-service/src/infrastructure/http/handlers/: email_handler.rs  mod.rs
fontes/notification-service/src/infrastructure/repository/: email_error_repository.rs  email_repository.rs  mod.rs
fontes/notification-service/src/shared/: settings.rs
fontes/notification-service/test_scripts/: post-msgs.sh
fontes/payment-service/: Dockerfile  Locacao.PaymentService.csproj  PaymentProgram.cs  go.mod  go.sum  main.go  sqs_consumer.go  tracing.go
fontes/payment-service/Controllers/: PaymentController.cs
fontes/payment-service/Models/: Payment.cs
fontes/rental-service/: Dockerfile  README.md  RentalProgram.cs  package-lock.json  package.json
fontes/rental-service/Controllers/: RentalController.cs
fontes/rental-service/Models/: Rental.cs
fontes/rental-service/src/: config.js  server.js  tracing.js
fontes/test_scripts/: post-msgs.sh
fontes/user-service/: Dockerfile  Program.cs  README.md  UserProgram.cs  UserService.API.csproj  UserService.sln  appsettings.Development.json  appsettings.Production.json  appsettings.Staging.json  appsettings.json
fontes/user-service/Controllers/: AuthController.cs  UserController.cs  UsersController.cs
fontes/user-service/Infra/: InternalServerError.cs  KeyCloakAdminAuthDelegatingHandler.cs
fontes/user-service/Models/: AccessTokenResult.cs  GenerateTokenCommand.cs  User.cs
fontes/user-service/Properties/: launchSettings.json
fontes/user-service/Services/: KeyCloakService.cs  UserService.cs  UsersService.cs
fontes/user-service/Validators/: CreateUserCommandValidator.cs
fontes/vehicle-service/: Dockerfile  Program.cs  README.md  VehicleService.API.csproj  VehicleService.API.sln  appsettings.Development.json  appsettings.Production.json
fontes/vehicle-service/Controllers/: CategoriesController.cs  VehiclesController.cs
fontes/vehicle-service/Models/: Category.cs  Vehicle.cs
(+76 files in other folders)
