[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.93.0"
chrono = {version = "0.4.43", features = ["serde"]}
config = "0.15.19"
dotenv = "0.15.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features= [
"runtime-tokio-rustls",
"postgres",
"uuid",
"macros",
"chrono"
]}
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[profile.release]
opt-level = 1           # Mantém alguma performance, mas compila muito mais rápido que o nível 3
lto = "off"             # O "Link Time Optimization" é o maior vilão do tempo de build; desligue-o
codegen-units = 16      # Aumentar para 16 ou mais permite compilar em paralelo (usa mais núcleos da CPU)
panic = 'abort'         # Mantém o binário leve e evita overhead
incremental = true      # Essencial para que pequenas mudanças no código não refaçam o binário do zero

[lints.clippy]
pedantic = "deny"
nursery = "deny"
