[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.93.0"
chrono = {version = "0.4.43", features = ["serde"]}
config = "0.15.19"
dotenv = "0.15.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features= [
"runtime-tokio-rustls",
"postgres",
"uuid",
"macros",
"chrono"
]}
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
tracing-opentelemetry = "0.22"

[profile.release]
opt-level = 0          # Desativa quase todas as otimizações (Build muito mais rápido)
lto = "off"            # Desliga a análise entre crates no link
codegen-units = 256    # Valor máximo: divide o código em micro-pedaços para paralelizar ao extremo
panic = 'abort'        # Remove a árvore de "unwinding", simplificando o binário
incremental = true     # Reutiliza o que já foi compilado anteriormente
debug = false          # Remove símbolos de debug que incham o processo de link
strip = "none"         # Não gaste tempo limpando o binário, deixe-o "sujo" mesmo

[lints.clippy]
pedantic = "deny"
nursery = "deny"
